# lambda-devsecops-cloudwatch-alarms

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt
.circleci/: config.yml  ecr_repo_lifecycle_policy.json  policy.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
lambda_sns_to_slack/: Cargo.toml  Dockerfile  Dockerfile.arm64  Makefile  README.md
lambda_sns_to_slack/src/: event_handler.rs
service/handlers/: handle_sns_event.py
service/handlers/utils/: observability.py
