[package]
name = "lambda_sns_to_slack"
version = "0.2.2"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.16.1", default-features = false, features = [
    "sns",
] }

lambda_runtime = "0.14.2"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
chrono = "0.4.41"
